# mpl-sphinx-theme

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  genindex.html  index-2.py  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.circleci/: config.yml
.github/: dependabot.yml
.github/.github/workflows/: lighthouse.yml  pre-commit.yaml  publish-pypi.yml
.github/.githubold/workflows/: main.yml
.github/workflows/: circleci.yml  lint.yml  main.yml  release.yml
_downloads/25f419794f3589105a3cedf01038cfc8/: index-1.py
_sources/: index.rst.txt
_static/css/: style.css
docs/: Makefile  conf.py  index.rst  requirements.txt
mpl_sphinx_theme/: __init__.py  _version.py  donate_sidebar.html  icon-links.html  mpl_icon_links.html  mpl_nav_bar.html  mpl_navbar_logo.html  theme.conf
mpl_sphinx_theme/components/: lib_version.html
mpl_sphinx_theme/static/css/: style.css
